--- a/docker/haproxy/templates/etc/haproxy/haproxy.cfg.jinja2
+++ b/docker/haproxy/templates/etc/haproxy/haproxy.cfg.jinja2
@@ -1,8 +1,29 @@
-global    # {{ DEBIAN_RELEASE }}
-frontend  stats
-    mode  http
-    bind  [2001:db8:aaaa:aaba:192:0:0:26]:80
-    stats enable
-    stats uri /stats
-    stats refresh 10s
-    stats admin if 2001:db8:aaaa:aaba:192:0:0:26/64
+global
+
+resolvers _netcrave
+  nameserver resolver_v4 192.0.0.18:53
+  nameserver resolver_v6 [2001:db8:aaaa:aaae:192:0:0:18]:53
+  
+frontend fe-http
+  mode http
+  acl well-known-acme path -m beg -i /.well-known/acme-challenge
+  bind [2001:db8:aaaa:aaba:192:0:0:26]:80
+  bind 192.0.0.26:80
+  bind [2001:db8:aaaa:aaba:192:0:0:26]:443
+  bind 192.0.0.26:443
+  use_backend be-acme if well-known-acme
+  
+backend be-acme
+  mode http
+  server acme [2001:db8:aaaa:aabd:192:0:0:46]:443 check send-proxy ssl verify
+
+backend be-firewall
+  mode http
+  server squid 192.0.0.30:3128 check send-proxy ssl verify
+
+{% for index in range(NUM_BACKENDS | int) %}
+backend be-{{ index }}
+  mode http
+  balance leastconn
+  server-template srv-{{ index }} 1-3 _srv-{{ index }}._https._tcp.local resolvers _netcrave check ssl verify init-addr none
+{% endfor %}
