--- a/docker/haproxy/templates/etc/haproxy/haproxy.cfg.jinja2
+++ b/docker/haproxy/templates/etc/haproxy/haproxy.cfg.jinja2
@@ -1,5 +1,17 @@
 global
-
+  ssl-server-verify required
+  
+defaults
+  timeout connect 5s
+  timeout client 50s
+  timeout server 50s
+  timeout http-request 10s
+  timeout http-keep-alive 2s
+  timeout queue 5s
+  timeout tunnel 2m
+  timeout client-fin 1s
+  timeout server-fin 1s
+  
 resolvers _netcrave
   nameserver resolver_v4 192.0.0.18:53
   nameserver resolver_v6 [2001:db8:aaaa:aaae:192:0:0:18]:53
@@ -9,21 +21,21 @@ frontend fe-http
   acl well-known-acme path -m beg -i /.well-known/acme-challenge
   bind [2001:db8:aaaa:aaba:192:0:0:26]:80
   bind 192.0.0.26:80
-  bind [2001:db8:aaaa:aaba:192:0:0:26]:443
-  bind 192.0.0.26:443
+  bind [2001:db8:aaaa:aaba:192:0:0:26]:443 ssl crt /etc/ssl/crt_and_key.pem
+  bind 192.0.0.26:443 ssl crt /etc/ssl/crt_and_key.pem
   use_backend be-acme if well-known-acme
   
 backend be-acme
   mode http
-  server acme [2001:db8:aaaa:aabd:192:0:0:46]:443 check send-proxy ssl verify
+  server acme [2001:db8:aaaa:aabd:192:0:0:46]:443 check send-proxy ssl ca-file /etc/ssl/certs/ca.crt
 
 backend be-firewall
   mode http
-  server squid 192.0.0.30:3128 check send-proxy ssl verify
+  server squid 192.0.0.30:3128 check send-proxy ssl ca-file /etc/ssl/certs/ca.crt
 
 {% for index in range(NUM_BACKENDS | int) %}
 backend be-{{ index }}
   mode http
   balance leastconn
-  server-template srv-{{ index }} 1-3 _srv-{{ index }}._https._tcp.local resolvers _netcrave check ssl verify init-addr none
+  server-template srv-{{ index }} 1-3 _srv-{{ index }}._https._tcp.local resolvers _netcrave check ssl ca-file /etc/ssl/certs/ca.crt init-addr none 
 {% endfor %}
