--- a/docker/squid/templates/etc/squid.conf.jinja2
+++ b/docker/squid/templates/etc/squid.conf.jinja2
@@ -1,8 +1,10 @@
 
-      http_port         3128
-      icap_enable       on
-      icap_service      service_req         reqmod_precache  bypass=1 icap://[2001:db8:aaaa:aaaf:192:0:0:22]:1344/request
-      adaptation_access service_req         allow all
-      icap_service      service_resp        respmod_precache bypass=0 icap://[2001:db8:aaaa:aaaf:192:0:0:22]:1344/response
-      adaptation_access service_resp        allow all
-      include           /etc/squid/conf.d/*
+http_port         3128                ssl-bump         cert=/etc/ssl/crt_and_key.pem
+icap_enable       on
+icap_service      service_req         reqmod_precache  bypass=1 icap://[{{ICAP_IP6}}]:1344/request
+adaptation_access service_req         allow all
+icap_service      service_resp        respmod_precache bypass=0 icap://[{{ICAP_IP6}}]:1344/response
+adaptation_access service_resp        allow all
+include           /etc/squid/conf.d/*
+
+http_access deny all
