--- a/docker/powerdns/templates/etc/powerdns/pdns.conf.jinja2
+++ b/docker/powerdns/templates/etc/powerdns/pdns.conf.jinja2
@@ -61,7 +61,7 @@ launch=
 launch=gpgsql
 # XXX FIXME 2001:db8:aaaa:aabc:192:0:0:34
 gpgsql-host=192.0.0.34
-gpgsql-port=26257
+gpgsql-port=5432
 gpgsql-user=powerdns
 gpgsql-dbname=powerdns
 gpgsql-extra-connection-parameters=sslmode=verify-full sslrootcert=/etc/ssl/certs/ca.crt sslcert=/etc/ssl/client.powerdns.crt sslkey=/etc/ssl/client.powerdns.key
@@ -77,7 +77,7 @@ gpgsql-get-order-last-query=select ordername, name from records where ordername 
 # log-dns-queries=no
 # log-timestamp=yes
 # logging-facility=
-# loglevel=4
+loglevel=4
 # lua-axfr-script=
 # lua-dnsupdate-policy-script=
 # lua-health-checks-expire-delay=3600
